--- a/index.pug
+++ b/index.pug
@@ -69,7 +69,7 @@ html(lang="zh-TW")
         .col-12.text-center
           h1 Youtube Iframe API Demo
           h6.pt-2 筆記文：
-            a(href="") Let's Write
+            a(href="https://letswrite.tw/youtube-iframe-api/") Let's Write
       
       hr.pb-3
       
